--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,13 +6,13 @@
 
     <string name="add_alarm">Add Alarm</string>
     <string name="edit_alarms">Edit Alarms</string>
-    <string name="title_activity_add_alarm">AddAlarmActivity</string>
+    <string name="title_activity_add_alarm">Add or Edit Goob Alarm</string>
 
 
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="show_message_title">My Message</string>
-    <string name="title_activity_math">MathActivity</string>
+    <string name="title_activity_math">Goob Math Challenge</string>
     <string name ="math_problem">Click Generate to Start!</string>
     <string name ="answer_here">Enter answer here!</string>
 	<string name ="answer">Answer!</string>
